--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -21,7 +21,7 @@
     <meta name="description" content="非物质文化遗产火龙罐介绍">
 </head><body><nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="https://www.example.com">
+        <a class="navbar-brand" href="https://ewader.github.io">
             
             <b style="font-weight: 800;">NP</b>
             
