--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -21,7 +21,7 @@
     <meta name="description" content="对慢性病人来说，食疗是最安全健康的方法">
 </head><body><nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="https://www.example.com">
+        <a class="navbar-brand" href="https://ewader.github.io">
             
             <b style="font-weight: 800;">NP</b>
             
