--- a/garden/huolongguan-meirong/index.html
+++ b/garden/huolongguan-meirong/index.html
@@ -96,11 +96,9 @@
 
     <div class="container-fluid py-2">
         <div class="serif main-content">
-            <p>前天吃了些上火的食物，昨天下巴处立马冒出两个大痘痘。晚上洗脸后我便用美容罐在脸上走罐，在痘痘处进行了重点走罐。</p>
-<pre><code> 第二天晨起观察，不光痘痘消了下去，连平时要几周才能消失的痘印，也几乎看不见。       
- 
- 美容冠不光祛痘，消炎也是杠杠的，更是加快了皮肤的自我修复过程。（忘了拍前后对比图。）
-</code></pre>
+            <p>前天吃了些上火的食物，昨天下巴处立马冒出两个大痘痘。晚上洗脸后我便用美容罐在脸上走罐，在痘痘处进行了重点走罐。                <br>
+第二天晨起观察，不光痘痘消了下去，连平时要几周才能消失的痘印，也几乎看不见。</p>
+<p>美容冠不光祛痘，消炎也是杠杠的，更是加快了皮肤的自我修复过程。（忘了拍前后对比图。）</p>
 
         </div>
     </div>
