--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -97,18 +97,22 @@
     <div class="container-fluid py-2">
         <div class="serif main-content">
             <h2 id="什么是火龙罐">什么是火龙罐</h2>
-<p><img src="https://ewader.github.io/img/hlg/huolongguan-1.png" alt="火龙罐">
-火龙罐不同于传统的火罐，它是由玄石紫砂混合，烧制成设计尺寸的罐体。根据罐体大小放置不同直径的艾柱，罐内与罐口由高科技的方法将金银与罐体高温融合成一体，罐口形似莲花齿瓣，罐内点燃地道药材蕲艾制成的艾柱，生成纯阳之性，如火龙之口驱寒、除湿、化瘀，因而取名“火龙罐”。</p>
+<p><img src="https://ewader.github.io/img/hlg/huolongguan-1.png" alt="火龙罐"></p>
+<p>火龙罐不同于传统的火罐，它是由玄石紫砂混合，烧制成设计尺寸的罐体。根据罐体大小放置不同直径的艾柱，罐内与罐口由高科技的方法将金银与罐体高温融合成一体，罐口形似莲花齿瓣，罐内点燃地道药材蕲艾制成的艾柱，生成纯阳之性，如火龙之口驱寒、除湿、化瘀，因而取名“火龙罐”。</p>
 <p>火龙罐综合灸是<strong>集刮痧、艾灸、推拿、点穴、熨烫于一体的中医护理技术</strong>，结合<strong>点、震、叩、碾、推、按、拨、揉、熨、烫</strong>十种推拿手法，兼以艾灸燃烧时产生的近红外光辐射的电磁波和光电对人体细胞线粒体发生生物化学作用，完全避免了刮痧及负压走罐的疼痛感，以及传统火罐造成的血瘀栓塞的副作用，即刮即化即消，几乎无痛的一种治疗性和舒适性并存的新疗法。</p>
 <h2 id="火龙罐的分类及特点">火龙罐的分类及特点</h2>
 <h3 id="大罐">大罐</h3>
-<p>爸爸罐，体积偏大，重量偏重，罐口齿轮较为尖深，火力旺盛、渗透力强，主要作用于肌肉丰厚腰背部、臀部。</p>
+<p><img src="https://ewader.com/img/hlg/huolong-2.png" alt="大号火龙罐">
+爸爸罐，体积偏大，重量偏重，罐口齿轮较为尖深，火力旺盛、渗透力强，主要作用于肌肉丰厚腰背部、臀部。</p>
 <h3 id="中罐">中罐</h3>
-<p>妈妈罐，罐口齿轮较为圆盾，呈莲花瓣状，火力中等，内柔外刚。主要作用于腹部。</p>
+<p><img src="https://ewader.com/img/hlg/huluo-3.png" alt="大号火龙罐">
+妈妈罐，罐口齿轮较为圆盾，呈莲花瓣状，火力中等，内柔外刚。主要作用于腹部。</p>
 <h3 id="小罐佛手罐铃铛花">小罐（佛手罐、铃铛花）</h3>
-<p>罐口齿轮较为圆盾，呈莲花瓣状，火力温和。主要作用于头面部、胸部及四肢躯干。</p>
+<p><img src="https://ewader.com/img/hlg/huolong-4.png" alt="大号火龙罐">
+罐口齿轮较为圆盾，呈莲花瓣状，火力温和。主要作用于头面部、胸部及四肢躯干。</p>
 <h2 id="火龙罐的疗法特点">火龙罐的疗法特点</h2>
-<p>罐体含阴阳、配五行、走四象、合六气！阴阳太极图金银镶嵌，罐体与人体的寒湿形成五行生克，数十种手法在四象“上下左右前后”方向上如同龙卷风一样不停地振动、摇摆、旋转，驱邪外出，达到温——以火攻邪，祛寒散滞，促进血液循环；通——通经活络，打通经络，改善心脑供血；调——平衡脏腑，调节神经机能，暖宫调经；补——扶正祛邪，补益强身，激活免疫系统的四大功效。</p>
+<p>罐体含阴阳、配五行、走四象、合六气！阴阳太极图金银镶嵌，罐体与人体的寒湿形成五行生克，数十种手法在四象“上下左右前后”方向上如同龙卷风一样不停地振动、摇摆、旋转，驱邪外出，达到温——以火攻邪，祛寒散滞，促进血液循环；通——通经活络，打通经络，改善心脑供血；调——平衡脏腑，调节神经机能，暖宫调经；补——扶正祛邪，补益强身，激活免疫系统的四大功效。
+<img src="https://ewader.com/img/hlg/huolong-6.png" alt="大号火龙罐"></p>
 <h2 id="火龙罐的优势">火龙罐的优势</h2>
 <ul>
 <li>
