--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
     <div class="container">
         <a class="navbar-brand" href="https://ewader.com">
             
-            <b style="font-weight: 800;">NP</b>
+            <b style="font-weight: 800;">中医适宜疗法</b>
             
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
