--- a/projects/doumaizhou/index.html
+++ b/projects/doumaizhou/index.html
@@ -54,7 +54,7 @@
 <div class="container" style="max-width: 800px;">
     <div class="py-4 rounded-3">
         <div class="container-fluid py-2">
-            <h1 class="display-2 mb-4 text-center">食疗调理慢性病</h1>
+            <h3 class="display-2 mb-4 text-center">食疗调理慢性病</h3>
         </div>
         
         <p class="text-center fs-4 fst-italic serif">对慢性病人来说，食疗是最安全健康的方法</p>
@@ -102,11 +102,25 @@
 <h2 id="手掌诊断法">手掌诊断法</h2>
 <p>刘伟承老师根据多年行医经验，根据手掌的颜色、干湿、温凉等情况，判断一个人的体质症型。</p>
 <h2 id="口味诊断法">口味诊断法</h2>
-<p>刘伟承老师总结的，根据一个人平常饮食口味来判断五脏六腑哪里有问题的方法。</p>
+<p>刘伟承老师根据《黄帝内经》总结，根据一个人平常饮食口味来判断五脏六腑哪里有问题的方法。
+中医认为：<strong>五脏和五行以及五味</strong>都有密切的关系。</p>
+<p>比如肝对应的是酸味，<strong>如果一个人非常嗜好酸味的食物，那么就会是肝气旺盛</strong>，肝属木，根据五行相生相克，木克土，就会影响到脾脏的功能，而脾虚会导致五脏六腑的不平衡，从而导致疾病。</p>
 <h2 id="豆麦十宝粥">豆麦十宝粥</h2>
-<p>根据中医症形，在豆麦十宝粥的基础上，加上其他食材，调理身体。老师的名言是：“药补不如食补，药疗不如食疗”。达到治未病的目的</p>
+<p>根据中医症形，在豆麦十宝粥的基础上，加上其他食材，调理身体。老师的名言是：“药补不如食补，药疗不如食疗”。达到治未病的目的。</p>
+<h3 id="豆麦十宝粥配方">豆麦十宝粥配方：</h3>
+<blockquote>
+<p>黄豆、玉米、花生米、荞麦、燕麦、胚芽粉、黑芝麻、亚麻仁、小米、高粱</p>
+</blockquote>
+<p>以上食材按照1:1的比例，熬粥。可以加入牛肉、羊肉等食材调味，以免常吃觉得单调。</p>
+<p>这是基础的食材，每个人都可以按照这个吃。可以在这个配方的基础上，根据个人体质加百合、莲子、红枣、薏米、红小豆、山药等等。</p>
 <h2 id="营养早餐">营养早餐</h2>
 <p>对于缺乏营养的慢性病患者，采用大豆分离蛋白粉等营养物质进行配方，形成营养早餐，配合豆麦十宝粥。</p>
+<p>配方如下：</p>
+<blockquote>
+<p>一勺蛋白粉（推荐安利的大豆分离蛋白粉），一个煮鸡蛋，一勺燕麦粉（可以把燕麦片打碎，老师推荐的是安利的有机燕麦）加适量温水（45度左右，根据自己的喜好加量），破壁机里打成糊状即可。
+这是一个人的量</p>
+</blockquote>
+<p>这里说明一下，安利的产品贵，但是品质是有保证的。售后服务也好。如果，你没有安利的渠道可以联系我，<mark> 微信号：jyxyanjing  </mark> 。我会把邀请码发给你，你自己去安利的官方商城买就是了。</p>
 
         </div>
     </div>
