--- a/projects/doumaizhou/index.html
+++ b/projects/doumaizhou/index.html
@@ -98,14 +98,7 @@
 
     <div class="container-fluid py-2">
         <div class="serif main-content">
-            <p>这是刘伟承老师根据自己多年中医临床经验总结出来的对慢性病的调理方法。具体包括：</p>
-<h2 id="手掌诊断法">手掌诊断法</h2>
-<p>刘伟承老师根据多年行医经验，根据手掌的颜色、干湿、温凉等情况，判断一个人的体质症型。</p>
-<h2 id="口味诊断法">口味诊断法</h2>
-<p>刘伟承老师根据《黄帝内经》总结，根据一个人平常饮食口味来判断五脏六腑哪里有问题的方法。
-中医认为：<strong>五脏和五行以及五味</strong>都有密切的关系。</p>
-<p>比如肝对应的是酸味，<strong>如果一个人非常嗜好酸味的食物，那么就会是肝气旺盛</strong>，肝属木，根据五行相生相克，木克土，就会影响到脾脏的功能，而脾虚会导致五脏六腑的不平衡，从而导致疾病。</p>
-<h2 id="豆麦十宝粥">豆麦十宝粥</h2>
+            <h2 id="豆麦十宝粥">豆麦十宝粥</h2>
 <p>根据中医症形，在豆麦十宝粥的基础上，加上其他食材，调理身体。老师的名言是：“药补不如食补，药疗不如食疗”。达到治未病的目的。</p>
 <h3 id="豆麦十宝粥配方">豆麦十宝粥配方：</h3>
 <blockquote>
@@ -113,6 +106,10 @@
 </blockquote>
 <p>以上食材按照1:1的比例，熬粥。可以加入牛肉、羊肉等食材调味，以免常吃觉得单调。</p>
 <p>这是基础的食材，每个人都可以按照这个吃。可以在这个配方的基础上，根据个人体质加百合、莲子、红枣、薏米、红小豆、山药等等。</p>
+<h3 id="改进配方">改进配方</h3>
+<blockquote>
+<p>（三豆）红小豆、绿豆、鹰嘴豆；（三麦）燕麦、荞麦、欠实；（三米）小米、高粱、黑芝麻；（六杂）花生、麦冬、百合、黄精、南瓜子、亚麻仁；红枣、牛肉粒。</p>
+</blockquote>
 <h2 id="营养早餐">营养早餐</h2>
 <p>对于缺乏营养的慢性病患者，采用大豆分离蛋白粉等营养物质进行配方，形成营养早餐，配合豆麦十宝粥。</p>
 <p>配方如下：</p>
@@ -120,6 +117,14 @@
 <p>一勺蛋白粉（推荐安利的大豆分离蛋白粉），一个煮鸡蛋，一勺燕麦粉（可以把燕麦片打碎，老师推荐的是安利的有机燕麦）加适量温水（45度左右，根据自己的喜好加量），破壁机里打成糊状即可。
 这是一个人的量</p>
 </blockquote>
+<h3 id="改进配方-1">改进配方</h3>
+<blockquote>
+<p>蛋白粉二勺、卵磷脂粉一勺、纤维粉一勺、林芝孢子粉一袋、熟鸡蛋一枚、生花生5-10颗、生燕麦片一二袋，苹果半个（或香蕉半支）！共同放入搅拌杯中加温水打成浆喝下去。倍立健一对，深海鱼油二粒</p>
+</blockquote>
+<h2 id="刘伟承老师如是说">刘伟承老师如是说</h2>
+<p>营养早餐关键的几个点，它要解决疾病的问题，要解决这个我们讲的这个亚健康的问题，那他们俩到底什么问题，那所有疾病它共同点在哪里，亚健康的共同点在哪里？他们的共同点就在哪里呀，消化道的问题要解决，消化道的问题就解决的肠菌平衡的问题，所以来讲这个配方的主要配方的方力重点是解决。肠道菌群平衡和活血化瘀这两个重大的目的。</p>
+<p>那吃的这个东西能不能减肥，可以减，<strong>你如果吃一两个月，你发现你可以减五到十斤，为什么呢？因为它增加代谢率，增加基础代谢率，这个非常的重要</strong>。</p>
+<p>而且还包括抗衰老，包括这个女孩子喜欢的那个面部的润泽，包括这个为什么会加花生进去啊，花生的目的就是这个目的。</p>
 <p>这里说明一下，安利的产品贵，但是品质是有保证的。售后服务也好。如果，你没有安利的渠道可以联系我，<mark> 微信号：jyxyanjing  </mark> 。我会把邀请码发给你，你自己去安利的官方商城买就是了。</p>
 
         </div>
