--- a/404.html
+++ b/404.html
@@ -133,6 +133,9 @@
         </ul>
     </nav>
 </header>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3628863674934446"
+     crossorigin="anonymous"></script>
 <main class="main">
 <div class="not-found">404</div>
     </main>
