--- a/garden/cases-of-high-fever-mycoplasma-chlamydia-in-children/index.html
+++ b/garden/cases-of-high-fever-mycoplasma-chlamydia-in-children/index.html
@@ -255,6 +255,11 @@
       <li><a href="https://ewader.com/tags/%E9%AB%98%E7%83%A7/">高烧</a></li>
     </ul>
 <nav class="paginav">
+  <a class="prev" href="https://ewader.com/garden/a-experience-in-health-preservation-huolongguan/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>使用火龙罐和营养早餐后的感受分享</span>
+  </a>
   <a class="next" href="https://ewader.com/huolongguangaishanxiaoeroutufuxie/">
     <span class="title">下一页 »</span>
     <br>
@@ -321,7 +326,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://ewader.com/">火龙罐综合灸</a></span>
+    <span>&copy; 2024 <a href="https://ewader.com/">火龙罐综合灸</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
