--- a/404.html
+++ b/404.html
@@ -18,6 +18,7 @@
 <link rel="mask-icon" href="https://ewader.com/img/favicon.png">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
+<link rel="alternate" hreflang="zh" href="https://ewader.com/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -102,12 +103,14 @@
                         <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
                     </svg>
                 </button>
+                <ul class="lang-switch"><li>|</li>
+                </ul>
             </div>
         </div>
         <ul id="menu">
             <li>
                 <a href="https://ewader.com/" title="🏠主页">
-                    <span class="active">🏠主页</span>
+                    <span>🏠主页</span>
                 </a>
             </li>
             <li>
