--- a/garden/talking-about-congee-from-perspective/index.html
+++ b/garden/talking-about-congee-from-perspective/index.html
@@ -19,6 +19,7 @@
 <link rel="mask-icon" href="https://ewader.com/img/favicon.png">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
+<link rel="alternate" hreflang="zh" href="https://ewader.com/garden/talking-about-congee-from-perspective/">
 <noscript>
     <style>
         #theme-toggle,
@@ -159,6 +160,8 @@
                         <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
                     </svg>
                 </button>
+                <ul class="lang-switch"><li>|</li>
+                </ul>
             </div>
         </div>
         <ul id="menu">
@@ -233,6 +236,11 @@
       <li><a href="https://ewader.com/tags/%E8%90%A5%E5%85%BB%E5%AD%A6/">营养学</a></li>
     </ul>
 <nav class="paginav">
+  <a class="prev" href="https://ewader.com/garden/baogan-48-day-gaibian/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>护肝48天，前后的变化</span>
+  </a>
   <a class="next" href="https://ewader.com/garden/a-experience-in-health-preservation-huolongguan/">
     <span class="title">下一页 »</span>
     <br>
