--- a/garden/bigu-yingyangzaocan/index.html
+++ b/garden/bigu-yingyangzaocan/index.html
@@ -19,6 +19,7 @@
 <link rel="mask-icon" href="https://ewader.com/img/favicon.png">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
+<link rel="alternate" hreflang="zh" href="https://ewader.com/garden/bigu-yingyangzaocan/">
 <noscript>
     <style>
         #theme-toggle,
@@ -159,6 +160,8 @@
                         <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
                     </svg>
                 </button>
+                <ul class="lang-switch"><li>|</li>
+                </ul>
             </div>
         </div>
         <ul id="menu">
